src/test/deca/context/valid/ContextAvecObjet/Cast/floatCastFloat.deca
//Description
//  Cast d'un float en float
//
//Réponse
//  ok
{
    float a = 1.0;
    float x = (float)(a);
}