src/test/deca/context/invalid/ContextAvecObjet/Cast/booleanCastBoolean.deca
//Description
//  Cast d'un boolean en boolean
//
//Réponse
//  Erreur contextuelle ligne 9
//  un boolean ne peut pas être cast dans un boolean
{
    boolean a = true;
    boolean x = (boolean)(a);
}